--- a/package.json
+++ b/package.json
@@ -10,6 +10,11 @@
   },
   "dependencies": {
     "@gsap/react": "^2.1.1",
+    "@headlessui/react": "^2.1.8",
+    "@mdx-js/loader": "^3.0.1",
+    "@mdx-js/react": "^3.0.1",
+    "@next/mdx": "^14.2.13",
+    "@types/mdx": "^2.0.13",
     "gsap": "^3.12.5",
     "next": "14.2.3",
     "next-themes": "^0.3.0",
@@ -19,6 +24,7 @@
     "react-scroll": "^1.9.0"
   },
   "devDependencies": {
+    "@tailwindcss/typography": "^0.5.15",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
