--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.2.1",
-    "react-scroll": "^1.9.0"
+    "react-scroll": "^1.9.0",
+    "rehype-pretty-code": "^0.14.0",
+    "shiki": "^1.18.0"
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.15",
@@ -32,6 +34,8 @@
     "autoprefixer": "^10.4.19",
     "postcss": "^8",
     "prettier": "^3.2.5",
+    "rehype-autolink-headings": "^7.1.0",
+    "rehype-slug": "^6.0.0",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
   }
